manifests/user-java.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: web-dev
---
kind: Namespace
apiVersion: v1
metadata:
  name: api-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace:  api-dev
  name: user-java-deployment
  labels:
    app: user-java
spec:
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryylk9728.azurecr.io/user-java:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: api-dev
  name: user-java-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: user-java

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace:  api-dev
  name: poi-deployment
  labels:
    app: poi
spec:
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registryylk9728.azurecr.io/poi:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace:  api-dev
  name: poi-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: poi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace:  api-dev
  name: user-profile-deployment
  labels:
    app: user-profile
spec:
  selector:
    matchLabels:
      app: user-profile
  template:
    metadata:
      labels:
        app: user-profile
    spec:
      containers:
      - name: user-profile
        image: registryylk9728.azurecr.io/userprofile:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api-dev
  name: user-profile-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: user-profile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api-dev
  name: trips-deployment
  labels:
    app: trips
spec:
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryylk9728.azurecr.io/trips:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: api-dev
  name: trips-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: trips

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: web-dev
  name: trip-viewer-deployment
  labels:
    app: trip-viewer
spec:
  selector:
    matchLabels:
      app: trip-viewer
  template:
    metadata:
      labels:
        app: trip-viewer
    spec:
      containers:
      - name: trip-viewer
        image: registryylk9728.azurecr.io/tripviewer:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: web-dev
  name: trip-viewer-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: trip-viewer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-profile-service
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: trip-viewer-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trip-viewer-service
            port:
              number: 80
